front/src/components/fields/DateRangeField/DateRangeField.scss
@use "../../../utils/sass/mixins/helpers";

.ds-date-range-field {
  margin: 0;
  padding: 0;
  border: 0;

  &__legend {
    display: flex;
    margin-bottom: helpers.px-to-rem(8);
    column-gap: helpers.px-to-rem(4);
    font-size: helpers.px-to-rem(18);
    font-weight: 600;

    span {
      font-weight: normal;
      color: var(--color-error);
    }
  }

  .ds-number-input-atom {
    width: helpers.px-to-rem(40);
  }

  &__inputs {
    display: flex;
    align-items: flex-end;
    gap: 8px;

    > * {
      display: flex;
      flex-direction: row-reverse;
      align-items: center;
    }
  }
}

